--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         $('#main_content').headsmart()
       })
     </script>
-    <title>Chosen KI by wangxiang4it</title>
+    <title>Chosen KI</title>
   </head>
 
   <body>
