--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <section id="main_content">
         <h1>
-<a id="wangxiang4itgithubio" class="anchor" href="#wangxiang4itgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>wangxiang4it.github.io</h1>
+<a id="wangxiang4itgithubio" class="anchor" href="#wangxiang4itgithubio" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>chosenki.github.io</h1>
 
 <p>Chosen KI的博客</p>
       </section>
