--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <footer>
         <span class="ribbon-outer">
           <span class="ribbon-inner">
-            <p>Projects by <a href="https://github.com/wangxiang4it">wangxiang4it</a> can be found on <a href="https://github.com/wangxiang4it">GitHub</a></p>
+            <p>Projects by <a href="https://github.com/chosenki">chosenki</a> can be found on <a href="https://github.com/chosenki">GitHub</a></p>
           </span>
           <span class="left-tail"></span>
           <span class="right-tail"></span>
