更新一点点

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <body>
     <section>
       <h1 class="project-name">Chosen KI的博客</h1>
+      <h2>This is the viewport that you remembering me...</h2>
     </section>
 
   </body>
