--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Chosen KI的博客 by chosenki</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="Shortcut Icon" href="/favicon.ico">
   </head>
   <body>
     <section>
